kubernetes/staging/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: stonehaven-staging
  name: api-gateway
  labels:
    environment: staging
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      name: api-gateway
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: ghcr.io/grayr0ot/sh-api-gateway:dev
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
