kubernetes/staging/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: stonehaven-staging
  name: api-gateway
  labels:
    environment: staging
    app: api-gateway
spec:
  selector:
    app: api-gateway
  type: ClusterIP
  ports:
    - name: api-gateway
      protocol: TCP
      port: 8080
      targetPort: 8080
