kubernetes/staging/api-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: stonehaven-staging
  name: api-gateway
  labels:
    environment: staging
    app: api-gateway
spec:
  ingressClassName: traefik
  rules:
    - host: api-staging.stonehaven.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
